mach2021- algolia customizations for social local

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Unified Ecom",
-  "name": "Unified InstantSearch E-commerce",
+  "name": "Social Local",
   "icons": [
     {
       "src": "favicon.ico",
